Bug 4276 - no longer DST in Mongolia
Summary: no longer DST in Mongolia
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: localedata (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: GNU C Library Locale Maintainers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-03-26 06:46 UTC by Dulmandakh Sukhbaatar
Modified: 2014-07-15 19:03 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
fweimer: security-


Attachments
no DST in Mongolia (313 bytes, patch)
2007-03-26 06:47 UTC, Dulmandakh Sukhbaatar
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dulmandakh Sukhbaatar 2007-03-26 06:46:26 UTC
In February government of Mongolia decided not to use DST anymore. So we need to
update zone file.
Comment 1 Dulmandakh Sukhbaatar 2007-03-26 06:47:08 UTC
Created attachment 1651 [details]
no DST in Mongolia
Comment 2 Sourceware Commits 2007-03-26 13:58:04 UTC
Subject: Bug 4276

CVSROOT:	/cvs/glibc
Module name:	libc
Changes by:	jakub@sourceware.org	2007-03-26 13:57:50

Modified files:
	.              : ChangeLog 
	timezone       : africa asia australasia backward europe 
	                 iso3166.tab leapseconds northamerica private.h 
	                 southamerica zdump.c zic.c zone.tab 

Log message:
	[BZ #4276]
	* timezone/africa: Update from tzdata2007d.
	* timezone/asia: Likewise.
	* timezone/australasia: Likewise.
	* timezone/backward: Likewise.
	* timezone/europe: Likewise.
	* timezone/iso3166.tab: Likewise.
	* timezone/leapseconds: Likewise.
	* timezone/northamerica: Likewise.
	* timezone/southamerica: Likewise.
	* timezone/zone.tab: Likewise.
	
	* timezone/private.h: Update from tzcode2007d.
	* timezone/zdump.c: Likewise.
	* timezone/zic.c: Likewise.

Patches:
http://sourceware.org/cgi-bin/cvsweb.cgi/libc/ChangeLog.diff?cvsroot=glibc&r1=1.10565&r2=1.10566
http://sourceware.org/cgi-bin/cvsweb.cgi/libc/timezone/africa.diff?cvsroot=glibc&r1=1.19&r2=1.20
http://sourceware.org/cgi-bin/cvsweb.cgi/libc/timezone/asia.diff?cvsroot=glibc&r1=1.38&r2=1.39
http://sourceware.org/cgi-bin/cvsweb.cgi/libc/timezone/australasia.diff?cvsroot=glibc&r1=1.31&r2=1.32
http://sourceware.org/cgi-bin/cvsweb.cgi/libc/timezone/backward.diff?cvsroot=glibc&r1=1.17&r2=1.18
http://sourceware.org/cgi-bin/cvsweb.cgi/libc/timezone/europe.diff?cvsroot=glibc&r1=1.37&r2=1.38
http://sourceware.org/cgi-bin/cvsweb.cgi/libc/timezone/iso3166.tab.diff?cvsroot=glibc&r1=1.14&r2=1.15
http://sourceware.org/cgi-bin/cvsweb.cgi/libc/timezone/leapseconds.diff?cvsroot=glibc&r1=1.12&r2=1.13
http://sourceware.org/cgi-bin/cvsweb.cgi/libc/timezone/northamerica.diff?cvsroot=glibc&r1=1.32&r2=1.33
http://sourceware.org/cgi-bin/cvsweb.cgi/libc/timezone/private.h.diff?cvsroot=glibc&r1=1.13&r2=1.14
http://sourceware.org/cgi-bin/cvsweb.cgi/libc/timezone/southamerica.diff?cvsroot=glibc&r1=1.31&r2=1.32
http://sourceware.org/cgi-bin/cvsweb.cgi/libc/timezone/zdump.c.diff?cvsroot=glibc&r1=1.16&r2=1.17
http://sourceware.org/cgi-bin/cvsweb.cgi/libc/timezone/zic.c.diff?cvsroot=glibc&r1=1.23&r2=1.24
http://sourceware.org/cgi-bin/cvsweb.cgi/libc/timezone/zone.tab.diff?cvsroot=glibc&r1=1.26&r2=1.27

Comment 3 Jakub Jelinek 2007-03-26 14:00:50 UTC
Fixed.